# RL_Exploration

./: .gitignore  README.md
2D-Grid-Optimization/: better_greedy_fill.txt  compile_and_run.txt
2D-Grid-Optimization/data/: maxHouses.txt  maxHouses_anno.txt
2D-Grid-Optimization/misc/: regex.txt
2D-Grid-Optimization/misc/cpp/: adjustedMaxHosues.cpp  adjustedMaxHouses  maximizeHouses  maximizeHouses.cpp
2D-Grid-Optimization/misc/python/: CPDQN.py  CP_DQN.py  oqrl_anno.py
2D-Grid-Optimization/misc/python/genetic_algorithm/v6/: genetic_v6.py  highscore.pkl  load_pkl_v6.py  numba_functions.py
2D-Grid-Optimization/project/: .gitignore  CMakeLists.txt  OPTIMIZATION_REPORT.md  agent.cpp  agent.h  best_city_layout.txt  city_planner  common.h  env copy.cpp  env.cpp  env.h  exp_replay.cpp  exp_replay.h  main.cpp  quick_test  quick_test.cpp  quick_test2  quick_test2.cpp  utils.cpp  utils.h
2D-Grid-Optimization/project/runs/: 20_20_1.txt  30_40_1.txt
